--- a/assets/css/fixed.css
+++ b/assets/css/fixed.css
@@ -20,14 +20,6 @@ body {
   border-top: 2px dashed rgba(204, 204, 204, 0.4);
 }
 
-.carousel-caption h1 {
-  text-shadow: 2px 2px 2px #005ef5;
-}
-
-.carousel-caption p {
-  text-shadow: 1px 1px 1px #005ef5;
-}
-
 .screen-reader-text {
   position: absolute;
   top: -9999px;
@@ -89,25 +81,6 @@ body {
   color: #fff;
 }
 
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel-item {
-  height: 32rem;
-}
-
-.carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 32rem;
-}
-
 .bd-placeholder-img {
   font-size: 1.125rem;
   text-anchor: middle;
@@ -121,23 +94,6 @@ body {
     font-size: 3.5rem;
   }
 }
-.carousel-indicators [data-bs-target] {
-  width: 60px;
-  height: 4px;
-}
-
-#carousel-clientes .carousel-item {
-  height: auto !important;
-}
-
-#carousel-clientes {
-  padding-bottom: 5rem;
-}
-
-#carousel-clientes .carousel-indicators [data-bs-target] {
-  background-color: #005ef5;
-}
-
 .svg-wrapper.svg-inverter {
   background-color: #005ef5;
 }
@@ -149,10 +105,6 @@ body {
 
 .svg-wrapper:not(.svg-inverter) {
   background: linear-gradient(to bottom, #2176ff, #005ef5);
-}
-
-#carousel .carousel-inner {
-  background: linear-gradient(to bottom, #005ef5, #2176ff);
 }
 
 .network-icons {
@@ -254,31 +206,6 @@ footer,
 .slide-04 {
   background: url("../images/illustrations/businesses.png") center left no-repeat;
   background-size: cover;
-}
-
-#carouselButtons {
-  position: relative;
-  top: 0;
-  right: 1rem;
-}
-
-.carousel-control-prev-icon {
-  background-image: none;
-}
-
-.carousel-control-next-icon {
-  background-image: none;
-}
-
-.carousel-control-prev-icon, .carousel-control-next-icon {
-  width: auto;
-  height: auto;
-}
-
-.carousel-control-prev-icon i,
-.carousel-control-next-icon i {
-  font-size: 10rem;
-  text-shadow: 1px 1px 1px #005ef5;
 }
 
 .action-btn-wrapper {
@@ -393,11 +320,11 @@ footer,
 }
 
 .toggle-spans {
-  height: 4rem;
+  height: 7.5rem;
   margin-bottom: 15px;
 }
 
-.toggle-spans .col {
+.toggle-spans > div {
   position: relative;
 }
 
@@ -414,25 +341,23 @@ footer,
   animation: goInGoOut 12s infinite;
 }
 
-.toggle-spans .text-end span {
+.toggle-spans .text-center span,
+.toggle-spans .text-center span {
   position: absolute;
-  right: 25px;
+  width: 100%;
+  left: 0;
 }
 
-.toggle-spans .text-end::after {
+.toggle-spans .text-md-end::after {
   content: "&";
   display: block;
   position: absolute;
-  right: -8px;
-  font-size: 70%;
+  right: 50%;
+  margin-right: -10px;
+  margin-top: 30px;
   font-weight: lighter;
   line-height: 52px;
   color: #005ef5;
-}
-
-.toggle-spans .text-start span {
-  position: absolute;
-  left: 25px;
 }
 
 .toggle-spans .span-01 {
